# adventofcode

./: .gitignore  base.hpp  build.nix  flake.nix  matrix.h  readme.md  shell.nix
2023/: CMakeLists.txt  base.hpp  geom.hpp  geom_plane.hpp  geom_transform.hpp  graph_export.hpp  idutil.hpp  matrix.hpp  parse_stream.hpp  range_tree.hpp  readme.md
2023/01/: task.hpp
2023/01/p1/: main.cpp
2023/01/p2/: main.cpp
2023/02/: task.hpp
2023/02/p1/: main.cpp
2023/02/p2/: main.cpp
2023/03/: task.hpp
2023/03/p1/: main.cpp
2023/03/p2/: main.cpp  out101.txt
2023/04/: task.hpp
2023/04/p1/: main.cpp
2023/04/p2/: main.cpp  out101.txt
2023/05/: task.hpp
2023/05/p1/: main.cpp  out101.txt
2023/05/p2/: main.cpp  out101.txt
2023/06/: task.hpp
2023/06/p1/: main.cpp
2023/06/p2/: main.cpp  out101.txt
2023/07/: task.hpp
2023/07/p1/: main.cpp  out101.txt
2023/07/p2/: main.cpp  out101.txt
2023/08/: task.hpp
2023/08/p1/: main.cpp
2023/08/p2/: main.cpp  out101.txt
2023/09/: task.hpp
2023/09/p1/: main.cpp  out101.txt
2023/09/p2/: main.cpp
2023/10/: task.hpp
2023/10/p1/: main.cpp
2023/10/p2/: main.cpp
2023/11/: task.hpp
2023/11/p1/: main.cpp  out101.txt
2023/11/p2/: main.cpp  out1.txt  out101.txt
2023/12/: task.hpp
2023/12/p1/: main.cpp
2023/12/p2/: main.cpp  (+1 more)
2023/13/: task.hpp
2023/14/: task.hpp
2023/15/: task.hpp
2023/16/: task.hpp
2023/17/: task.hpp
2023/18/: task.hpp
2023/19/: task.hpp
2023/20/: task.hpp
2023/21/: task.hpp
2023/22/: task.hpp
2023/23/: task.hpp
2023/24/: task.hpp
2023/25/: task.hpp
(+133 files in other folders)
